[package]
name = "kusa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
graphql_client = { version = "0.10.0", features = ["reqwest-blocking"] }
reqwest = { version = "^0.11", features = ["json", "blocking"] }
serde = "1.0.137"
clap = { version = "^3.0", features = ["derive"] }